--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/01_sequences.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/01_sequences.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNXAWI5XgMsJ2Gww/PFw7Xz",
+      "authorship_tag": "ABX9TyP5Rs+CH2AgwLKN01TsWvkL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "7f933674-852a-4fa4-95d8-1ba292e85a9b",
+        "outputId": "7299ffb3-c761-42f8-a6a6-d54c936f2f0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -173,7 +173,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "a8778154-ee08-4a64-e7b2-4437ea0255c5",
+        "outputId": "4ed50616-f970-4fba-eaf2-be72a9a5d626",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -209,7 +209,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "a0431c19-eaae-4618-992d-e8e982a5b3b2",
+        "outputId": "d2942677-3fef-493d-c15e-4d637b6d9998",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -246,7 +246,7 @@
       ],
       "metadata": {
         "id": "fiiqQUbznqCZ",
-        "outputId": "6a9a4bc8-1027-4c91-8258-21623761bc96",
+        "outputId": "fc5e53e3-0e94-499a-e316-be835d63b99a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -302,7 +302,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "3a8d1146-8a3c-4779-ffb7-4f060feb9a62",
+        "outputId": "7f9bcafb-a910-4fd2-c46f-bb63c6a86206",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
@@ -362,7 +362,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c062f32-0f25-4797-9b2e-76073d404f9b"
+        "outputId": "2a4f44d7-cfcd-4185-d182-d28bd5b988e4"
       },
       "execution_count": 9,
       "outputs": [
@@ -505,7 +505,7 @@
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "d805a3df-3aa7-4c5b-9bef-a40268a8390f",
+        "outputId": "c8d0c5dd-4e7c-49f8-f501-2202e67e73ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -576,7 +576,7 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "00553ae2-5741-490f-ef5e-429036b179b1",
+        "outputId": "b58c5673-e8f5-4380-8062-a83e20970436",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -613,7 +613,7 @@
       ],
       "metadata": {
         "id": "0RQR7yROSSmV",
-        "outputId": "a46d7269-f7f6-412a-b350-d1c95966bcf2",
+        "outputId": "6a0e1a3c-b637-4f0c-bfba-a9cc9eb541aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -649,7 +649,7 @@
       ],
       "metadata": {
         "id": "kfOyTyfxSdMU",
-        "outputId": "b1519b6b-524b-4d4e-fb51-434819963370",
+        "outputId": "0410e2b9-e02e-4192-e997-64de5a343441",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -688,7 +688,7 @@
       ],
       "metadata": {
         "id": "mh6oCaRyS26C",
-        "outputId": "e8dbb2fa-5f68-48ff-f8dd-72cd5b4aaec5",
+        "outputId": "43f66b1b-9abd-401e-f305-217ee8a82d91",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -724,7 +724,7 @@
       ],
       "metadata": {
         "id": "Ofvt0ujdTJPn",
-        "outputId": "3dca282f-2c6b-404b-87f0-4e2b0bdeaa89",
+        "outputId": "6a453b4f-6aac-430a-f4b2-f927981c3dd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -760,7 +760,7 @@
       ],
       "metadata": {
         "id": "cpnEcvNuTiWR",
-        "outputId": "d27b003f-005b-434c-f0c8-53dc459e5923",
+        "outputId": "81c8122f-7359-4ab9-a5fc-99ba89069522",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -797,7 +797,7 @@
       ],
       "metadata": {
         "id": "Z4rLUNyTTw8_",
-        "outputId": "dc65c5ce-573b-49a4-c38b-e5e1930c7fca",
+        "outputId": "ac9a8ea3-0dee-49da-9de2-909a2a7245d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -838,7 +838,7 @@
       ],
       "metadata": {
         "id": "38SDpCl7VucF",
-        "outputId": "dd2367b0-ad9a-4351-9634-6ca76b1f2b80",
+        "outputId": "310c3e48-40d9-435d-dc97-0bb4aa2972c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 223
@@ -880,7 +880,7 @@
       ],
       "metadata": {
         "id": "fFDDhIX5XlKG",
-        "outputId": "eb2fafaf-d07a-4b9a-8fcd-e43bf934d5c9",
+        "outputId": "14741f45-d9fe-4414-ab5a-ddac3cb56d62",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -935,7 +935,7 @@
       ],
       "metadata": {
         "id": "fxhP2vifYK0Q",
-        "outputId": "4bfffef0-456c-470c-c0b9-1cf65fadb9a7",
+        "outputId": "132e23d3-8452-427f-a5b9-951562060159",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1017,7 +1017,7 @@
       ],
       "metadata": {
         "id": "3j6coSQ3KXoY",
-        "outputId": "8baac3b9-a641-46f1-81ab-f59e71c719ba",
+        "outputId": "f11f7532-f09e-4580-ecf8-f076b47404c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1065,13 +1065,21 @@
       ],
       "metadata": {
         "id": "PVz1tloOLbiF",
-        "outputId": "2602a0e2-110f-49c5-da44-73e421542fc1",
+        "outputId": "bea0419f-cf78-423e-88a7-9595591113a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 23,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-23-2a03d7664898>:1: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:245.)\n",
+            "  batch = torch.as_tensor(points[:3]).float()\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1080,7 +1088,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 23
         }
       ]
     },
@@ -1102,12 +1110,12 @@
       ],
       "metadata": {
         "id": "zfYuoj0oMnRG",
-        "outputId": "0a86c35f-576d-4498-f3f4-cf7d70499ee2",
+        "outputId": "040736f5-6e57-4e87-b1b2-cacfbcd63854",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1117,7 +1125,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 24
         }
       ]
     },
@@ -1142,12 +1150,12 @@
       ],
       "metadata": {
         "id": "_ooNCvYAM38u",
-        "outputId": "c6c132e7-0d60-4e65-b8fa-5195163d7097",
+        "outputId": "700b6552-f6d5-4bff-b4be-7b56a9633295",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1157,7 +1165,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 25
         }
       ]
     },
@@ -1178,12 +1186,12 @@
       ],
       "metadata": {
         "id": "R57WlKgCObf5",
-        "outputId": "f89ee5d6-e0d0-42b7-d158-f312c898f0c2",
+        "outputId": "7b138e5d-bfed-4bd3-acfc-678a2fc9814c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1193,7 +1201,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 26
         }
       ]
     },
@@ -1215,12 +1223,12 @@
       ],
       "metadata": {
         "id": "0bg45LM1OthD",
-        "outputId": "0b1ba547-ed52-4972-e503-3babf594b6d8",
+        "outputId": "b11b63e4-cab8-441c-f9f7-aaa61bc0d475",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1230,7 +1238,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 27
         }
       ]
     },
@@ -1255,12 +1263,12 @@
       ],
       "metadata": {
         "id": "08pO4WNQPIYY",
-        "outputId": "01f8552c-a5de-4b90-a733-d1501f77a0fc",
+        "outputId": "f5df5a3a-689d-4f0c-e7a6-47c552d8bd26",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1270,7 +1278,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 28
         }
       ]
     },
@@ -1295,9 +1303,305 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "First, take one RNN and feed it a sequence of data points. Next, take another RNN\n",
+        "and feed it the sequence of outputs produced by the first RNN. There you go—you\n",
+        "have a stacked RNN where each of the RNNs is considered a \"layer\" of the stacked\n",
+        "one.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/stacked_rnn.png?raw=1)\n",
+        "\n",
+        "Each \"layer\" starts with its own initial hidden state and produces its own final\n",
+        "hidden state. The output of the stacked RNN—that is, the hidden states at each\n",
+        "step of the sequence—are the hidden states of the top-most layer.\n",
+        "\n",
+        "Let’s create a stacked RNN with two layers."
+      ],
       "metadata": {
         "id": "rvaL2jfyP14O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(19)\n",
+        "\n",
+        "rnn_stacked = nn.RNN(input_size=2, hidden_size=2, num_layers=2, batch_first=True)\n",
+        "state = rnn_stacked.state_dict()\n",
+        "state"
+      ],
+      "metadata": {
+        "id": "nqzzzTm1mMEg",
+        "outputId": "d80d833a-271f-4554-8ba0-30feef3c07ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weight_ih_l0',\n",
+              "              tensor([[ 0.6627, -0.4245],\n",
+              "                      [ 0.5373,  0.2294]])),\n",
+              "             ('weight_hh_l0',\n",
+              "              tensor([[-0.4015, -0.5385],\n",
+              "                      [-0.1956, -0.6835]])),\n",
+              "             ('bias_ih_l0', tensor([0.4954, 0.6533])),\n",
+              "             ('bias_hh_l0', tensor([-0.3565, -0.2904])),\n",
+              "             ('weight_ih_l1',\n",
+              "              tensor([[-0.6701, -0.5811],\n",
+              "                      [-0.0170, -0.5856]])),\n",
+              "             ('weight_hh_l1',\n",
+              "              tensor([[ 0.1159, -0.6978],\n",
+              "                      [ 0.3241, -0.0983]])),\n",
+              "             ('bias_ih_l1', tensor([-0.3163, -0.2153])),\n",
+              "             ('bias_hh_l1', tensor([ 0.0722, -0.3242]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, let’s create two simple RNNs and use the weights and biases above to set\n",
+        "their weights accordingly."
+      ],
+      "metadata": {
+        "id": "T8NbiULfmoVU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rnn_layer0 = nn.RNN(input_size=2, hidden_size=2, batch_first=True)\n",
+        "rnn_layer1 = nn.RNN(input_size=2, hidden_size=2, batch_first=True)\n",
+        "\n",
+        "rnn_layer0.load_state_dict(dict(list(state.items())[:4]))\n",
+        "rnn_layer1.load_state_dict(dict([(k[:-1] + \"0\", v) for k, v in list(state.items())[:4]]))"
+      ],
+      "metadata": {
+        "id": "dboqP2ccmozL",
+        "outputId": "3f5357e1-745e-4df6-c92b-56c8bc7b52a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, let’s make a batch containing one sequence from our synthetic dataset."
+      ],
+      "metadata": {
+        "id": "OczMYeB8nmnh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.as_tensor(points[0:1]).float()"
+      ],
+      "metadata": {
+        "id": "WPOjDlv4nnQU"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "output_0, hidden_0 = rnn_layer0(x)"
+      ],
+      "metadata": {
+        "id": "tyE5kg03n1yK"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, it uses the sequence of hidden states as inputs for the next layer:"
+      ],
+      "metadata": {
+        "id": "T_1988Q1oCIV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "output_1, hidden_1 = rnn_layer0(output_0)"
+      ],
+      "metadata": {
+        "id": "rwLM6_VSoBFC"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The overall output of the stacked RNN must have two elements as well:\n",
+        "\n",
+        "* A sequence of hidden states, produced by the last layer (out1).\n",
+        "* The concatenation of final hidden states of all layers."
+      ],
+      "metadata": {
+        "id": "uiEUoaiYoPqm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "output_1, torch.cat([hidden_0, hidden_1])"
+      ],
+      "metadata": {
+        "id": "GkDar46coUqa",
+        "outputId": "9111333c-a687-492c-fd8f-8151674a55c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[[ 0.0531,  0.6414],\n",
+              "          [ 0.0805,  0.1358],\n",
+              "          [ 0.0755,  0.0951],\n",
+              "          [-0.4173,  0.0798]]], grad_fn=<TransposeBackward1>),\n",
+              " tensor([[[-0.5297,  0.3551]],\n",
+              " \n",
+              "         [[-0.4173,  0.0798]]], grad_fn=<CatBackward0>))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Done! We’ve replicated the inner workings of a stacked RNN using two simple\n",
+        "RNNs.\n",
+        "\n",
+        "You can double-check the results."
+      ],
+      "metadata": {
+        "id": "8DBHkTA-onjS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "output, hidden = rnn_stacked(x)\n",
+        "output, hidden"
+      ],
+      "metadata": {
+        "id": "XwFmO8-LosrU",
+        "outputId": "0a00f216-b568-4dda-a051-21742705e58c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[[-0.7533, -0.7711],\n",
+              "          [-0.0566, -0.5960],\n",
+              "          [ 0.4324, -0.2908],\n",
+              "          [ 0.1563, -0.5152]]], grad_fn=<TransposeBackward1>),\n",
+              " tensor([[[-0.5297,  0.3551]],\n",
+              " \n",
+              "         [[ 0.1563, -0.5152]]], grad_fn=<StackBackward0>))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "And you’ll get exactly the same results.\n",
+        "\n",
+        "For stacked RNNs, the last element of the output is the final\n",
+        "hidden state of the LAST LAYER! \n",
+        "\n",
+        "But, since we’re using a\n",
+        "batch_first layer, we need to permute the hidden state’s\n",
+        "dimensions to batch-first as well."
+      ],
+      "metadata": {
+        "id": "N0DhMtdhqQ1d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(output[:, -1] == hidden.permute(1, 0, 2)[:, -1]).all()"
+      ],
+      "metadata": {
+        "id": "Y6b2FeBIqYcj",
+        "outputId": "64afb683-cbf1-478e-d1f8-d9e14aa6c410",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Bidirectional RNN"
+      ],
+      "metadata": {
+        "id": "A3xp2mYOqnVf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "k7Rz7NMSqo4Y"
       }
     }
   ]
