--- a/dive-into-deep-learning/pytorch/10-encoder-decoder/02-seq2seq.ipynb
+++ b/dive-into-deep-learning/pytorch/10-encoder-decoder/02-seq2seq.ipynb
@@ -17,9 +17,7 @@
         "id": "9523cd32"
       },
       "source": [
-        "The following additional libraries are needed to run this\n",
-        "notebook. Note that running on Colab is experimental, please report a Github\n",
-        "issue if you have any problem."
+        "## Sequence-to-Sequence Learning"
       ]
     },
     {
@@ -42,9 +40,6 @@
         "id": "01a8a8a0"
       },
       "source": [
-        "##  Sequence-to-Sequence Learning for Machine Translation\n",
-        ":label:`sec_seq2seq`\n",
-        "\n",
         "In so-called sequence-to-sequence problems such as machine translation\n",
         "(as discussed in :numref:`sec_machine_translation`),\n",
         "where inputs and outputs each consist\n",
@@ -114,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "ce06f943",
       "metadata": {
         "execution": {
@@ -257,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "31f59e8b",
       "metadata": {
         "execution": {
@@ -315,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "9bf17f30",
       "metadata": {
         "execution": {
@@ -353,7 +348,7 @@
         }
       },
       "id": "4Qy9d0_4pb_i",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,7 +375,7 @@
         }
       },
       "id": "HxqN82iXpeyf",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +411,7 @@
         }
       },
       "id": "EBBuIXCjpo0S",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -443,7 +438,7 @@
         }
       },
       "id": "_OwJPSzdpwwh",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +465,7 @@
         }
       },
       "id": "zVGjz-Wjo9TQ",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -500,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "f264cebf",
       "metadata": {
         "execution": {
@@ -689,11 +684,28 @@
         "\n",
         "\n",
         "\n",
-        "## Encoder--Decoder for Sequence-to-Sequence Learning\n",
-        "\n",
-        "\n",
-        "Putting it all together in code yields the following:\n"
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Encoder--Decoder"
+      ],
+      "metadata": {
+        "id": "vhCz0phQq8r9"
+      },
+      "id": "vhCz0phQq8r9"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Putting it all together in code yields the following:"
+      ],
+      "metadata": {
+        "id": "lrd_Vkluq84m"
+      },
+      "id": "lrd_Vkluq84m"
     },
     {
       "cell_type": "code",
